--- a/SELFHELP/index.html
+++ b/SELFHELP/index.html
@@ -6,6 +6,7 @@ SELFHELP
 </title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="theme-color" content="#39231d"/>
 <link rel="stylesheet" href="stylesheet1.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <style>
@@ -18,11 +19,12 @@ and is wrapped around the whole page content, except for the footer in this exam
 <div class="w3-content" style="max-width:1400px">
 
 <!-- Header -->
-<header class="w3-container w3-center w3-padding-32 bg">
-  <img src="logo.png" class="logo" ALIGN=”right”> 
+<header class="w3-container w3-center w3-padding-32 bg header-background">
+  <img src="logo.png" class="logo" ALIGN=”right”>  
   <h1><b>SELF HELP</b></h1>
   <p><span class="w3-tag">#Just_Gist</span></p>
 </header>
+
 
 <!-- Grid -->
 <div class="w3-row">
@@ -31,27 +33,26 @@ and is wrapped around the whole page content, except for the footer in this exam
 <div class="w3-col l8 s12">
   <!-- Blog entry -->
   <div class="w3-card-4 w3-margin w3-white">
-    <img src="https://images.unsplash.com/photo-1481627834876-b7833e8f5570?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=541&q=80" alt="Jist_1" style="width:100%;height:50%">
+    <img src="https://images.unsplash.com/photo-1527247043589-98e6ac08f56c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80" alt="Jist_1" style="width:100%;height:50%">
     <div class="w3-container">
-      <h3><b>"This Would Be The Heading 1"</b></h3>
-      <h5>,From Book By Author <span class="w3-opacity">Month DD, YYYY</span></h5>
+      <h3><b>"The Monk Who Sold His Ferrari"</b></h3>
+      <h5>,From "The Monk Who Sold His Ferrari" By "Robin Sharma" <span class="w3-opacity">July 24, 2019</span></h5>
     </div>
 
     <div class="w3-container">
-      <p>In Q4 2013, after much fascination about web and playing with Photoshop to make layouts, I realised I had to learn HTML and CSS if I wanted to bring my designs to life. Turns out it took 1 day(5-6 hours) to learn the basics and 2 more days to be able to work my way around it. This is to show how easy it is to learn HTML and CSS. However, there is more to it and I'll discuss that later.
+      <p>
+Ive always wondered what this book is about. The title is catchy and I loooooove Ferraris. Do you want one? I want one. Maybe that means this book is for you and me! Because Julian Mantle, the fictional, seven-figure-making lawyer this story is about, had one. And he was unhappy. So he sold it. It turns out, he didn?t need his Ferrari. He needed wisdom. So after he collapsed from all the stress with a heart attack, he sold everything and ventured into the Himalayan mountains. There, he found the Sages of Sivana, which taught him seven virtues, making him promise he?d pass on their teachings. Flowing through the quill of Robin Sharma, who published The Monk Who Sold His Ferrari in 1997, Julian did pass on what he learned. Over 6 million people have picked up his lessons. Today, I?d like to share 3 of them with you: Use The Heart of the Rose exercise to guard your mind against unwanted thoughts. Develop a simple 10-step morning routine with The Ten Rituals of Radiant Living. Selflessly serving others counterintuitively leaves you better off too. Ready for a short round of improvement? Lets see what we can learn from the monk who sold his Ferrari!
+</p>
 
-When I first started, I looked into W3schools and I didn't like the style. So I searched more and found a cool tutorial site HTML5 Tutorial | HTML 5 Tutorial.
-I learned from there.
-
-Before you start, you will need some tools:
-1. A text editor. You can use the one that comes preloaded in your computer. In Windows it's Notepad or Wordpad, in Ubuntu it's gedit and I think Mac has TextMate. I personally use Sublime Text because it's really nice on my eyes. You could use Notepad++ or Dreamweaver(which is a paid one) or anything that suits you. There is a myriad of text editors online. I think most people use the ones I've mentioned here.</p>
       <div class="w3-row">
         <div class="w3-col m8 s12">
-          <p><button class="w3-button w3-padding-large w3-white w3-border"><b>READ MORE >> </b></button></p>
+          <p><button class="w3-button w3-padding-large w3-white w3-border">
+<b><a href="jist1.html">READ MORE >> </a></b></button>
+</p>
         </div>
-        <div class="w3-col m4 w3-hide-small">
-          <p><span class="w3-padding-large w3-right"><b>Comments &nbsp;</b> <span class="w3-tag">56</span></span></p>
-        </div>
+        //<div class="w3-col m4 w3-hide-small">//
+          //<p><span class="w3-padding-large w3-right"><b>Comments &nbsp;</b> <span class="w3-tag">56</span></span></p>//
+        //</div>//
       </div>
     </div>
   </div>
@@ -59,33 +60,20 @@ Before you start, you will need some tools:
 
   <!-- Blog entry -->
   <div class="w3-card-4 w3-margin w3-white">
-  <img src="https://images.unsplash.com/photo-1485322551133-3a4c27a9d925?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80" alt="Jist_2" style="width:100%;height:50%">
+  <img src="https://images.unsplash.com/photo-1494368308039-ed3393a402a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=813&q=80" alt="Jist_2" style="width:100%;height:50%">
     <div class="w3-container">
-      <h3><b>"This Would Be The Heading 2"</b></h3>
-      <h5>From Book By Author, <span class="w3-opacity">Month DD, YYYY</span></h5>
+      <h3><b>""Who Will Cry When You Die""</b></h3>
+      <h5>From "Who Will Cry When You Die" By "Robin Sharma", <span class="w3-opacity">July 24, 2019</span></h5>
     </div>
 
     <div class="w3-container">
-      <p>
-A web browser (I'm not even sure if there was a point in putting that here haha). Well, in the beginning, it's not really going to matter, but as you progress, you will need to have different browsers to test your output. You will realize it soon enough that you have to install Chrome, Firefox, Safari, Opera, IE, Edge or w.e browser there is to be able to see if your page is cross-browser compatible. Of course, by then you will realize that you can use frameworks to solve this problem.
+      <p>Who Will Cry When You Die? looks at life from a unique perspective. So many of us get caught up in what?s happened, what?s happening, or what might happen in the immediate future. Who Will Cry When You Die? is a gentle reminder to look forward, to the end of your life, and imagine what you will want the ?whole package? of your life to look like. It encourages us to ask not only ?What did I accomplish??, but also ?What impact did I make??, and ?What am I leaving behind?? What?s the Point? "One of the greatest lessons for living a highly fulfilling life is to rise from a life spent chasing success to one dedicated to finding significance." - Who Will Cry When You Die?, page 221 There are a lot of miserable people with a lot of money. 
 
-Okay, now I'll give you some tips. I As mentioned above, I learned it pretty fast and so can you. The trick is that you need to write code while you learn. Some people might argue that they prefer read a whole chunk, then start writing code and go back if they don't remember. This doesn't work for me. I believe that practice while you read is the best way to get the information inside your head :)
 
-From the link I posted above, you will see that the tutorials are very easy to read and provide you with simple code snippets that you need to type and see the output from your browser. So, start from with the basics, make sure you understand what's happening and work your way up. HTML is basically understanding how tags and nesting work. I'm pretty sure you learned basic sets in grade school. Basically HTML is like sets and subsets. You simply need to know visualize how nesting works. Once you can easily see the nesting, you're good to go :)
-
-I learned basic CSS on W3schools. It was easy to test the CSS there. There are definitely more CSS resources and tutorials online for you to learn from, so I suggest find what works fr you. For CS, you just need to understand 2 things as a beginner: 
-1. id 
-2. class
-
-The id is used for styling one thing whereas the class is used to style many different things. Let's take an example. If you have a main section and a comment section, you would want to have 2 different ids for each section so you can style them. Now you could have different texts on your page. Some could be used in the comment section, some could be used elsewhere. If you want to have the same font style for the same text at different places, then you use the class.
-So simply think of the id as your ID. You can only have 1 ID number and not 2 different ones. Think of the class as your credit cards. You can have several credit cards that you use to buy the same stuff. That should cover the basics of CSS. Now you just have to apply the styling.
-
-Once you have a grasp of the basics, it's time to build something worthwhile. In my case I had a design that i made in Photoshop and I really wanted to convert it to an actual HTML page, so I did that. This is the part where you learn the most, because that's when you will realize that you can't do something and you have to Google a solution. That's completely fine. That's how you learn. You'll use Stackoverflow a lot and you will realize that most of your questions have already been answered with a solution. So that's how you get better at it. 
-
-Once you manage to build a decent page, you can start looking at Web Design Inspiration websites which showcase some amazingly well-designed websites and you can learn from there as well. See how they do it and try to make something similar(for educational purposes only.</p>
+</p>
       <div class="w3-row">
         <div class="w3-col m8 s12">
-          <p><button class="w3-button w3-padding-large w3-white w3-border"><b>READ MORE >> </b></button></p>
+          <p><button class="w3-button w3-padding-large w3-white w3-border"><b><a href="jist2.html">READ MORE >> </a></b></button></p>
         </div>
         <div class="w3-col m4 w3-hide-small">
           <p><span class="w3-padding-large w3-right"><b>Comments &nbsp;</b> <span class="w3-badge">59</span></span></p>
@@ -100,10 +88,12 @@ Once you manage to build a decent page, you can start looking at Web Design Insp
 <div class="w3-col l4">
   <!-- About Card -->
   <div class="w3-card w3-margin w3-margin-top">
-  <img src="https://images.unsplash.com/photo-1529007196863-d07650a3f0ea?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80" style="width:100%;height:50%">
+  <img src="https://www.robinsharma.com/assets/images/template/robin_portrait.png" style="width:100%;height:50%">
     <div class="w3-container w3-white">
-      <h4><b>Author This Week</b></h4>
-      <p> That's completely fine. That's how you learn. You'll use Stackoverflow a lot and you will realize that most of your questions have already been answered with a solution. So that's how you get better at it. Once you manage to build a decent page, you can start looking at Web Design Inspiration websites which showcase some amazingly well-designed websites and you can learn from there as well. See how they do it and try to make something similar(for educational purposes only. Note that it's unethical to copy someone else work and label it as your own.) I guess if you put 4-5 hours per day for a week, you should be good with the basics of HTML and CSS and be able to make some cool pages from scratch. After some good amount practice and making different types of websites, you will realize that sometimes your page looks perfect on one browser and not on another browser. That's fine. This is when you will start looking into cross-browser compatibilities and frameworks such as Bootstrap for example. DO NOT, I repeat, DO NOT learn Bootstrap first. A lot of people make this mistake. I believe that you should have a god grasp of the base and then move to frameworks. Your life will be way easier. But then, HTML and CSS are not really enough. Sometimes you will realize that you want to achieve something and it can't be done using only HTML and CSS. For example, you want to cool effects. So I suggest to learn Javascript once you feel you have a good base with HTML and CSS. And afterwards you can move to back-end with a language like PHP or Ruby. Both are very common lanaguages used these days. As you get more and more advanced look into stuff like Node.js or Angular.
+      <h4><b>Robin Sharma</b></h4>
+      <p> 
+Robin Sharma is one of the world's premier speakers on Leadership and Personal Mastery. As a presenter, Sharma has the rare ability to electrify an audience yet deliver uncommonly original and useful insights that lead to individuals doing their best work, teams providing superb results and organizations becoming unbeatable. For nearly 20 years, many of the most well-known organizations on the planet, ranging from Nike, GE, Microsoft, FedEx, PwC, HP and Oracle to NASA, Yale University and YPO have chosen Robin Sharma for their most important events, when nothing less than a world-class speaker will do.
+Sharma's books such as The Leader Who Had No Title have topped bestseller lists internationally and his social media posts reach over six hundred million people a year, making him a true global phenomenon for helping people do brilliant work, thrive amid change and realize their highest leadership capacities within the organization so that personal responsibility, productivity, ingenuity and mastery soars. Sharma has been ranked as one of the Top 5 Leadership Experts in the World in an independent survey of over 22,000 businesspeople and appears on platforms with other luminaries such as Richard Branson, Bill Clinton, Jack Welch and Shaquille O'Neal.
 </p>
     </div>
   </div><hr>
@@ -116,23 +106,23 @@ Once you manage to build a decent page, you can start looking at Web Design Insp
     <ul class="w3-ul w3-hoverable w3-white">
       <li class="w3-padding-16">
         <img src="https://images.unsplash.com/photo-1521587760476-6c12a4b040da?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80" alt="Image" class="w3-left w3-margin-right" style="width:50px">
-        <span class="w3-large">Post1_Yesterday</span><br>
-        <span>Post1_Yesterday</span>
+        <span class="w3-large">The Monk Who Sold His Ferrari</span><br>
+        <span><a href="jist1.html">Read More >> </a></span>
       </li>
       <li class="w3-padding-16">
         <img src="https://images.unsplash.com/photo-1507842217343-583bb7270b66?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=853&q=80" alt="Image" class="w3-left w3-margin-right" style="width:50px">
-        <span class="w3-large">Post2_DayBeforeYesterday</span><br>
-        <span>Post2_DayBeforeYesterday</span>
+        <span class="w3-large">Who Will Cry When You Die</span><br>
+        <span><a href="jist2.html">Read More >> </a></span>
       </li> 
       <li class="w3-padding-16">
         <img src="https://images.unsplash.com/photo-1521587760476-6c12a4b040da?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80" alt="Image" class="w3-left w3-margin-right" style="width:50px">
-        <span class="w3-large">Post2_Yesterday</span><br>
-        <span>Post2_Yesterday</span>
+        <span class="w3-large">The Monk Who Sold His Ferrari</span><br>
+        <span><a href="jist1.html">Read More >> </a></span>
       </li>   
       <li class="w3-padding-16 w3-hide-medium w3-hide-small">
         <img src="https://images.unsplash.com/photo-1507842217343-583bb7270b66?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=853&q=80" alt="Image" class="w3-left w3-margin-right" style="width:50px">
-        <span class="w3-large">Post1_DayBeforeYesterday</span><br>
-        <span>Post1_DayBeforeYesterday</span>
+        <span class="w3-large">Who Will Cry When You Die</span><br>
+        <span><a href="jist2.html">Read More >> </a></span>
       </li>  
     </ul>
   </div>
@@ -147,10 +137,11 @@ Once you manage to build a decent page, you can start looking at Web Design Insp
 </div>
 
 <!-- Footer -->
-<footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
-  <button class="w3-button w3-black w3-disabled w3-padding-large w3-margin-bottom">Contact Us >> </button>
-  <button class="w3-button w3-black w3-padding-large w3-margin-bottom">About Us >> </button>
-<button class="w3-button w3-black w3-disabled w3-padding-large w3-margin-bottom">Post >> </button>
+<footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top header-background bg">
+  <button class="w3-button w3-black w3-disabled w3-padding-large w3-margin-bottom">Home >> </button>
+  <button class="w3-button w3-black w3-padding-large w3-margin-bottom">Editorial >> </button>
+<button class="w3-button w3-black w3-padding-large w3-margin-bottom">Career >> </button>
+<button class="w3-button w3-black w3-padding-large w3-margin-bottom">About Us >> </button>
 </footer>
 
 
